[package]
name = "fetch2"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] } 

[[bin]]
name = "fetch2"
path = "src/fetch2.rs"
